[package]
name = "actix-ws-echo"
version = "0.1.0"
authors = ["Nikola Whallon <nikola@deepgram.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.7"
actix-web = { version = "^0.7.19", features = ["rust-tls"] }

